--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,14 +1,14 @@
 ---
-title: Alpaca Bag
-subtitle: HackFSU 5 Poroject
+title: Dreams
+subtitle: Website Design
 layout: default
 modal-id: 1
-date: 2018-03-12
+date: 2014-07-18
 img: dreams.png
 thumbnail: dreams-thumbnail.png
 alt: image-alt
-project-date: March 2018
-type: Start Bootstrap
+project-date: April 2014
+client: Start Bootstrap
 category: Web Development
 description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
 
