Take down template

--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -1,6 +1,6 @@
 ---
-title: Treehouse
-subtitle: Website Design
+title: Trump Egg Ratings
+subtitle: Twitter Bot
 layout: default
 modal-id: 4
 date: 2014-07-15
